# stanseCL

./: CMakeLists.txt  Parser.cpp  Parser.h  ParserPlugin.cpp  README.rst  a.c  main.cpp
